--- a/RealEstate_Dapper_UI/RealEstate_Dapper_UI.csproj
+++ b/RealEstate_Dapper_UI/RealEstate_Dapper_UI.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\NewFolder\" />
+    <Folder Include="Dtos\ServiceDtos\" />
   </ItemGroup>
 
 </Project>
